updating portfolio copy

--- a/src/templates/data/portfolio.yml
+++ b/src/templates/data/portfolio.yml
@@ -1,36 +1,36 @@
 - title: Bally Ribbon Mills
-  description: Design and Development
+  description: Web Design and Development
   href: /work/brm
   alias: brm
 - title: Cambridge Public Library
-  description: Design
+  description: Environmental Design
   href: /work/environmental-design
   alias: cpl
 - title: Demand Response Calculator
-  description: Development
+  description: UX Development
   href: /work/calculator
   alias: calc  
 - title: Drizly Email Marketing
-  description: Design and Development
+  description: UI Design and Development
   href: /work/drizly
   alias: drizly
 - title: Elev8d Fitness
-  description: Design and Development
+  description: UX Development
   href: /work/fitnessapp
   alias: elev8d
 - title: Linkwell Content Hub
-  description: Design and Development
+  description: Web Design and Development
   href: /work/hle
   alias: hle
 - title: Princeton Alumni Magazine
-  description: Design and Development
+  description: Web Design and Development
   href: /work/paw
   alias: paw
 - title: PennStater
-  description: Development
+  description: Web Development
   href: /work/pennstater
   alias: penn  
 - title: Enel X Wind Journey
-  description: Design and Development
+  description: Web Design and Development
   href: /work/wind-journey
   alias: wind-journey
